--- a/index.html
+++ b/index.html
@@ -15,7 +15,16 @@
 </head>
 
 <body>
-
+    <section>
+        <div class="container">
+            <h1> <span class="orange-color">Skip</span> The Diet, <br> Just Eat Healthy <br> With Food Network</h1>
+            <p>Imagine you dont need a diet because we provide healthy and delicious food for you!</p>
+            <a class="link-button" target="_blank" href="#">Order Food</a>
+        </div>
+        <div class="container">
+            <img src="images/male/2.png" alt="jhankar">
+        </div>
+    </section>
 </body>
 
 </html>
