--- a/index.html
+++ b/index.html
@@ -25,6 +25,18 @@
             <img src="images/male/2.png" alt="jhankar">
         </div>
     </section>
+    <section class="fix-container">
+        <div class="container">
+            <img src="images/male/4.png" alt="A">
+        </div>
+        <div class="container">
+            <h2>About Me</h2>
+            <p>Food is any substance consumed to provide nutritional support for an organism. Food is usually of plant,
+                animal or fungal origin and contains essential nutrients, such as carbohydrates, fats.</p>
+            <a class="link-button" target="_blank" href="#">Contact me</a>
+        </div>
+    </section>
+
 </body>
 
 </html>
