--- a/index.html
+++ b/index.html
@@ -36,6 +36,18 @@
             <a class="link-button" target="_blank" href="#">Contact me</a>
         </div>
     </section>
+    <sections class="recipies-area">
+        <div class="my-recipies">
+            <h1>My Recipies</h1> <br>
+            <p>Food is any substance consumed to provide nutritional support for an organism.
+                <br>
+                Food is usually of plant, Food is any substance consumed to provide nutritional support for an organism.
+                <br>
+                2021s.
+            </p>
+        </div>
+    </sections>
+
 
 </body>
 
