--- a/index.html
+++ b/index.html
@@ -47,6 +47,29 @@
             </p>
         </div>
     </sections>
+    <section>
+        <div class="flexible-container">
+            <div class="recipis-item">
+                <img src="images/food/Project Cover1.jpg" alt="">
+                <h2>Recipie Title</h2> <br>
+                <P>Food is usually of plant, Food is any substance consumed to provide nutritional support for an
+                    organism.</P>
+            </div>
+            <div class="recipis-item">
+                <img src="images/food/Project Cover.jpg" alt="">
+                <h2>Recipie Title</h2> <br>
+                <P>Food is usually of plant, Food is any substance consumed to provide nutritional support for an
+                    organism.</P>
+            </div>
+            <div class="recipis-item">
+                <img src="images/food/Project Cover.png" alt="">
+                <h2>Recipie Title</h2> <br>
+                <P>Food is usually of plant, Food is any substance consumed to provide nutritional support for an
+                    organism.</P>
+            </div>
+        </div>
+    </section>
+
 
 
 </body>
