--- a/index.html
+++ b/index.html
@@ -69,7 +69,22 @@
             </div>
         </div>
     </section>
-
+    <section class="full-follower">
+        <div id="followers">
+            <div class="link">
+                <h1>700k</h1>
+                <p>youtube Subscribers</p>
+            </div>
+            <div class="link">
+                <h1>2.4m</h1>
+                <p>Instagram Followers</p>
+            </div>
+            <div class="link">
+                <h1>100k</h1>
+                <p>Dribbble Shot Likes</p>
+            </div>
+        </div>
+    </section>
 
 
 </body>
