--- a/index.html
+++ b/index.html
@@ -85,7 +85,15 @@
             </div>
         </div>
     </section>
-
+    <footer class="food-network">
+        <div class="fix footer_part">
+            <div class="fix footer_left floatleft"></div>
+            <h2> <span class="food-color">FOOD</span> NETWORK</h2>
+            <p>Eat healthy to live healthy. Live healthy to live happy.</p>
+        </div>
+        <p class="copysec"><span class="copyright">Copyright: &copy; Hunat it, All Rights Reserved</span>
+        <p>
+    </footer>
 
 </body>
 
